@@ -153,8 +153,6 @@ void mfem_backtrace(int mode, int depth)
 
 void mfem_error(const char *msg)
 {
-   std::cout << msg << std::endl;
-   std::abort();
    std::ostream &merr = internal::mfem_err_initialized ? mfem::err : std::cerr;
    if (msg)
    {
